feat(delete):delete all todos - add delete endpoint - write endpoint test - add swagger docs for the endpoint
